# QTable

./: .gitignore  README.md  pyproject.toml
qtable/: Procfile  manage.py  requirements.txt
qtable/qtable/: asgi.py  settings.py  urls.py  wsgi.py
qtable/qtable_app/: apps.py  models.py  urls.py  views.py
qtable/qtable_app/migrations/: 0001_initial.py  0002_quoteofday_updated_quoteofday_users.py
qtable/qtable_app/templates/qtable_app/: base.html  favorites.html  index.html  quotes_list.html
qtable/users/: forms.py  urls.py  views.py
qtable/users/templates/users/: confirm_email.html  email_success_template.html  login.html  mail_body.html  mail_body.txt  signup.html
