[tool.poetry]
name = "qtable"
version = "0.1.0"
description = "QTable - Quote of day with django"
authors = ["GodVov4 <volume245@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "5.0.1"
django-environ = "0.11.2"
httpx = "0.26.0"
django-email-verification = "0.3.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
